--- a/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.scss
+++ b/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.scss
@@ -1,27 +1,17 @@
-.example-container {
-    width: 500px;
-    height: 300px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+.side-container {
+  height: 100%;
+  background-color: white;
 }
-
-.example-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
-.example-sidenav {
-    padding: 20px;
-}
-
 .sidenav {
-    width: 230px;
+  width: 230px;
+  margin-bottom: 1%;
+  margin-right: 0.1%;
+
 }
 
-@media(max-width: 900px) {
-    .sidenav {
-        width: 73%;
-        box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
-    }
+@media (max-width: 900px) {
+  .sidenav {
+    width: 73%;
+    box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
+  }
 }
