--- a/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
+++ b/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
@@ -18,26 +18,27 @@
       <!-- contenido de filtros -->
       <mat-drawer [class.mat-elevation-z1]=true position="end" #drawer class="sidenav" [mode]="isDesktop ? 'side' : 'over'"
         [opened]="openMenu">
-        <app-general-filter-buyer (filters)="getFilters($event)" (resetAll)="getBuyerAll()" [isDesktop]="isDesktop"></app-general-filter-buyer>
+        <app-general-filter-buyer (filters)="getFilters($event)" (resetAll)="getBuyerAll()" (closeMenu)="drawer.close()"
+          [isDesktop]="isDesktop"></app-general-filter-buyer>
       </mat-drawer>
       <!-- /contenido de filtros -->
       <!-- filtros boton -->
       <ion-item *ngIf="!isDesktop" lines="none">
         <ion-button (click)="drawer.toggle()" slot="end" color="secondary" fill="outline">
-          <ion-icon name="funnel"></ion-icon>Filtros(0)
+          <ion-icon name="funnel"></ion-icon>Filtros({{numOfFilters}})
         </ion-button>
       </ion-item>
       <ion-item *ngIf="isDesktop" lines="none">
         <ion-button (click)="drawer.toggle()" slot="end" color="secondary" fill="outline">
-          <ion-icon name="funnel"></ion-icon>Filtros Ocultar
+          <ion-icon name="funnel"></ion-icon>Filtros {{(drawer.openedChange | async) ? 'cerrar' : 'abrir'}}
         </ion-button>
       </ion-item>
+
       <!-- /filtros boton -->
 
-      <!-- Table -->
-      <app-general-table [columns]="columns" [rows]="rows" (editButton)="edit($event)" (deletedButton)="deleted($event)"
-        [isDesktop]="isDesktop" [filterByDayInput]="filterDay" [filterByMonthInput]="filterMonth" [filterByYearInput]="filterYear"
-        [filterByStateInput]="filterState"></app-general-table>
+      <!-- Table  -->
+      <app-general-table [columns]="columns" [rows]="rows" [isDesktop]="isDesktop" (editButton)="edit($event)"
+        (deletedButton)="presentAlertConfirm($event)"></app-general-table>
       <!-- /Table -->
     </mat-drawer-container>
 
@@ -52,3 +53,9 @@
 
 
 </ion-content>
+<!-- fab placed to the bottom end -->
+<ion-fab vertical="bottom" horizontal="start" slot="fixed">
+  <ion-fab-button (click)="newBuyer()" *ngIf="isLoading" color="secondary">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
