--- a/src/app/components/general/general-filter-buyer/general-filter-buyer.component.html
+++ b/src/app/components/general/general-filter-buyer/general-filter-buyer.component.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons *ngIf="!isDesktop" slot="start">
-      <ion-button (click)="applyFilters()" slot="start">
+      <ion-button (click)="applyFilters(); goBack()" slot="start">
         <ion-icon mode="md" slot="icon-only" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Filtros</ion-title>
     <ion-buttons slot="end">
-      <ion-button color="success" slot="end" (click)="applyFilters();">
+      <ion-button color="success" slot="end" (click)="applyFilters();goBack()">
         <ion-icon mode="md" slot="icon-only" name="checkmark-circle"></ion-icon>
       </ion-button>
       <ion-button color="danger" slot="end" (click)="reset();goBack()">
@@ -16,12 +16,6 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-
-
-<!-- <mat-toolbar class="top-bar">Filtros</mat-toolbar> -->
-
-
 <!-- <div class="main"> -->
 <ion-content fullscreen>
   <ion-list>
