--- a/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
+++ b/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
@@ -37,6 +37,7 @@
       <!-- /filtros boton -->
 
       <!-- Table  -->
+      <h2>Lista de Clientes </h2>
       <app-general-table [columns]="columns" [rows]="rows" [isDesktop]="isDesktop" (editButton)="edit($event)"
         (deletedButton)="presentAlertConfirm($event)" (detailsButton)="detailBuyer($event)"></app-general-table>
       <!-- /Table -->
@@ -50,8 +51,6 @@
   <ng-template #noLoad>
     <app-general-skeleton></app-general-skeleton>
   </ng-template>
-
-
 </ion-content>
 <!-- fab placed to the bottom end -->
 <ion-fab vertical="bottom" horizontal="start" slot="fixed">
