--- a/src/app/components/admin/list-prop-admin/list-prop-admin.component.html
+++ b/src/app/components/admin/list-prop-admin/list-prop-admin.component.html
@@ -37,6 +37,7 @@
       <!-- /filtros boton -->
 
       <!-- Table  -->
+      <h2>Lista de Propiedades </h2>
       <app-general-table [columns]="columns" [rows]="rows" [isDesktop]="isDesktop" (editButton)="edit($event)"
         (deletedButton)="presentAlertConfirm($event)" (detailsButton)="detailProp($event)"></app-general-table>
       <!-- /Table -->
