--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -11,19 +11,16 @@
 <ion-header>
   <ion-toolbar color="secondary">
     <ion-buttons slot="start">
-      <ion-button (click)="backOne()" slot="start">
+      <ion-button *ngIf="showFullCalendar" (click)="backOne()" slot="start">
         <ion-icon mode="ios" slot="icon-only" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title *ngIf="showFullCalendar" style="text-align: center">{{month[monthNumber]}} {{year}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="!showFullCalendar" (click)="presentAlertPrompt()" slot="end">
-        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-      </ion-button>
-      <ion-button (click)="showFullCalendar = !showFullCalendar" slot="end">
+      <ion-button (click)="showFullCalendar = !showFullCalendar; getEvents(); " slot="end">
         <ion-icon slot="icon-only" [name]="showFullCalendar ? 'clipboard' : 'calendar'"></ion-icon>
       </ion-button>
-      <ion-button (click)="fowardOne()" slot="end">
+      <ion-button *ngIf="showFullCalendar" (click)="fowardOne()" slot="end">
         <ion-icon mode="ios" slot="icon-only" name="arrow-forward"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -51,7 +48,6 @@
           'state-rojo':  item.status === 'rojo',
           'state-gris': item.status === 'gris',
           'state-azul':  item.status === 'azul',
-          'state-amarillo':  !item.status,
           'desktop-card': isDesktop    }">
           <ion-card-header>
             <ion-card-subtitle>
@@ -97,6 +93,15 @@
                 <p>{{item.day}}/{{item.month}}/{{item.year}}</p>
               </ion-label>
             </ion-item>
+            <ion-item lines="none" *ngIf="item.day">
+              <ion-icon slot="start" class="color-item-secondary" name="time"></ion-icon>
+              <ion-label slot="start" text-wrap>
+                <p><b>Hora del Evento:</b> </p>
+                <p *ngIf="!item.minute">{{item.hour}}hrs</p>
+                <p *ngIf="item.minute < 10">{{item.hour}}:0{{item.minute}}</p>
+                <p *ngIf="item.minute >= 10">{{item.hour}}:{{item.minute}}</p>
+              </ion-label>
+            </ion-item>
             <!-- <ion-item lines="none" *ngIf="item.status">
               <ion-icon slot="start" class="color-item-secondary" name="cash"></ion-icon>
               <ion-label slot="start" text-wrap>
@@ -115,8 +120,16 @@
               </ion-label>
             </ion-item>
           </ion-card-content>
-        </ion-card>
+          <ion-item lines="none">
+            <ion-button (click)="newEventById(item._id)" color="success" fill="outline" slot="end">
+              Editar <ion-icon name="create"></ion-icon>
+            </ion-button>
+            <ion-button (click)="presentAlertConfirm(item._id)" color="danger" fill="outline" slot="end">
+              Borrar <ion-icon name="trash"></ion-icon>
+            </ion-button>
 
+          </ion-item>
+        </ion-card>
       </ng-template>
 
 
