--- a/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.scss
+++ b/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.scss
@@ -7,3 +7,14 @@
 .flex-container>* {
     width: 100%;
 }
+
+.flex-container2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 3%;
+    border: 2px solid darkgray;
+    border-radius: 8px;
+
+}
